--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 aiohttp==3.8.3
 aiosignal==1.3.1
 appdirs==1.4.4
+asttokens==2.2.1
 async-timeout==4.0.2
 attrs==22.2.0
+backcall==0.2.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
+comm==0.1.2
 datasets==2.9.0
+debugpy==1.6.6
+decorator==5.1.1
 dill==0.3.6
 docker-pycreds==0.4.0
 environs==9.5.0
+executing==1.2.0
 filelock==3.9.0
 frozenlist==1.3.3
 fsspec==2023.1.0
@@ -17,20 +23,35 @@ gitdb==4.0.10
 GitPython==3.1.30
 huggingface-hub==0.12.0
 idna==3.4
+ipykernel==6.21.0
+ipython==8.9.0
+jedi==0.18.2
+jupyter_client==8.0.2
+jupyter_core==5.2.0
 marshmallow==3.19.0
+matplotlib-inline==0.1.6
 multidict==6.0.4
 multiprocess==0.70.14
 numpy==1.24.1
 packaging==23.0
 pandas==1.5.3
+parso==0.8.3
 pathtools==0.1.2
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.6.2
+prompt-toolkit==3.0.36
 protobuf==4.21.12
 psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyarrow==11.0.0
+Pygments==2.14.0
 python-dateutil==2.8.2
 python-dotenv==0.21.1
 pytz==2022.7.1
 PyYAML==6.0
+pyzmq==25.0.0
 regex==2022.10.31
 requests==2.28.2
 responses==0.18.0
@@ -38,11 +59,15 @@ sentry-sdk==1.14.0
 setproctitle==1.3.2
 six==1.16.0
 smmap==5.0.0
+stack-data==0.6.2
 tokenizers==0.13.2
+tornado==6.2
 tqdm==4.64.1
+traitlets==5.9.0
 transformers @ git+https://github.com/Joqsan/transformers.git@823bb6e0f821420a225fb4dcfb8ef7a9dcbcd28b
 typing_extensions==4.4.0
 urllib3==1.26.14
 wandb==0.13.9
+wcwidth==0.2.6
 xxhash==3.2.0
 yarl==1.8.2
